# nao_extras

./: .gitignore  README.md  stack.xml
nao_common/: CMakeLists.txt  package.xml
nao_description/: mainpage.dox  manifest.xml
nao_description/launch/: nao_state_publisher.launch
nao_description/urdf/: nao_robot.srdf  nao_robot.urdf.xacro  nao_robot_structure.urdf.xacro  nao_robot_v3_structure.urdf.xacro  nao_robot_v4_structure.urdf.xacro  visuals.xacro
nao_extras/: CHANGELOG.rst  CMakeLists.txt  package.xml
nao_extras_msgs/: CMakeLists.txt  package.xml
nao_extras_msgs/msg/nao_face_detection/: FaceDetected.msg  FaceExtraInfo.msg  FaceEyePoints.msg  FaceEyebrowPoints.msg  FaceInfo.msg  FaceMouthPoints.msg  FaceNosePoints.msg  FaceShapeInfo.msg
nao_interaction/: package.xml
nao_interaction/launch/: nao_face_detection.launch
nao_interaction/nodes/: nao_face_detection.py
nao_interaction/nodes/naoqi_vision/: nao_face_detection.py
nao_interaction_msgs/: CMakeLists.txt
nao_path_follower/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
nao_path_follower/src/: nao_path_follower.cpp
nao_remote/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
nao_remote/launch/: nao_remote.launch  ps3controller.launch  teleop_nao_sim.launch
nao_remote/scripts/: execute_pose.py  nao_imu_conversion.py  pose_manager.py  print_odometry.py
nao_remote/src/: nao_path_follower.cpp  remap_odometry.cpp  teleop_nao_joy.cpp
nao_teleop/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
nao_teleop/config/: ps3controller.yaml
nao_teleop/include/nao_teleop/: teleop_nao_joy.h
nao_teleop/launch/: ps3controller.launch  teleop_joy.launch  teleop_nao.launch
nao_teleop/src/: teleop_nao_joy.cpp  teleop_nao_joy_node.cpp
