<package>
  <name>nao_extras</name>
  <version>0.2.1</version>
  
  <description>
    Extra tools for the Nao robot: teleoperation with a gamepad and path following. Renamed
    from the nao_common stack.
  </description>
  
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/nao_extras</url>
  <url type="bugtracker">https://github.com/ros-nao/nao_extras/issues</url>
  <url type="repository">https://github.com/ros-nao/nao_extras</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>

 <run_depend>nao_path_follower</run_depend>
 <run_depend>nao_teleop</run_depend>

</package>
