<package>
  <name>nao_path_follower</name>
  <version>0.3.1</version>
  <description>
  Enables a Nao humanoid to either walk to a target location (with localization feedback),
  or follow a planned 2D path closely. Sends naoqi_msgs to the nao_walker node in nao_apps.
  </description>
  
  <author>Armin Hornung</author>
  <author>Stefan Osswald</author>
  <author>Daniel Maier</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nao_path_follower</url>
  <url type="bugtracker">https://github.com/ros-naoqi/nao_extras/issues</url>
  <url type="repository">https://github.com/ros-naoqi/nao_extras</url> 

  <buildtool_depend>catkin</buildtool_depend>
    
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>naoqi_bridge_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>naoqi_bridge_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>angles</run_depend>

</package>


