<package>
  <name>nao_teleop</name>
  <version>0.3.1</version>
  <description>
    Teleoperation (gamepad or joystick) for the Nao humanoid
  </description>
  <author>Armin Hornung</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nao_remote</url>
  <url type="bugtracker">https://github.com/ros-naoqi/nao_extras/issues</url>
  <url type="repository">https://github.com/ros-naoqi/nao_extras</url> 
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>naoqi_bridge_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  
  <!--Same as build dependencies -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>naoqi_bridge_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  
  <!-- New build dependencies (for launch files) -->
  <run_depend>joy</run_depend>

</package>
